@@ -63,17 +63,17 @@ my $wire = '0e6172626974726172795f74657874';
 		q|contiguous|,	q|three unquoted strings|,
 		q|"in quotes"|, q|"two separate" "quoted strings"|,
 		q|"" empty|,	q|" " space|,
-		q|!|,		q|"\""|,
-		q|#|,		q|"$"|,
+		q|!|,		q|\"|,
+		q|#|,		q|\$|,
 		q|%|,		q|&|,
-		q|"'"|,		q|"("|,
-		q|")"|,		q|*|,
+		q|'|,		q|\(|,
+		q|\)|,		q|*|,
 		q|+|,		q|,|,
 		q|-|,		q|.|,
 		q|/|,		q|:|,
-		q|";"|,		q|<|,
+		q|\;|,		q|<|,
 		q|=|,		q|>|,
-		q|?|,		q|"@"|,
+		q|?|,		q|\@|,
 		q|[|,		q|\\\\|,
 		q|]|,		q|^|,
 		q|_|,		q|`|,
